# yoyo

./: .gitignore  AGENTS.md  AVIRAJ.md  CHANGELOG.md  CLAUDE.md  COMPETITORS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  METRICS.md  README.md  typescript  yoyo.json
.cursor/: mcp.json
.github/: pull_request_template.md
.github/scripts/: install-homebrew-formula.sh  use-onnxruntime-asset.sh
.github/workflows/: ci.yml  homebrew-install.yml  onnxruntime-asset.yml  release.yml
docs/: README.md  architecture.md  blog-v1.10.0-to-v1.12.0.md  harness-design.html  index.html  rlm-and-yoyo.html  slm-router-plan.md
evals/: README.md  run.py  write_run.py
evals/harness/: README.md  codex_runner.py  directed_codex_runner.py  main.go  run_latest_tags.py  test_codex_runner.py  test_directed_codex_runner.py
evals/results/: 2026-03-07-040530.json  2026-03-07-040743.json  2026-03-07-040911.json  2026-03-07-041122.json  2026-03-07-123638.json  2026-03-07-135803.json  2026-03-07-135828.json  2026-03-07-140513.json  2026-03-07-140645.json  2026-03-07-180242.json  2026-03-07-180410.json  2026-03-07-181123.json  2026-03-07-181328.json  2026-03-07-181441.json  2026-03-07-181558.json  2026-03-07-181731.json  2026-03-07-185153.json  2026-03-07-185341.json  2026-03-07-185525.json  2026-03-07-185637.json  2026-03-07-185743.json  (+24 more)
playbook/: language-capability-discovery.md  metapatterns.md  simulate.md  zig-0.15.md
reports/: analyze.sh  benchmark-5-projects-2026-03-07.md  todo-tracker.md
src/: cli.rs  engine.rs  main.rs  mcp.rs  ts_index.rs
tests/: homebrew_install_formula.rs
(+107 files in other folders)
