[package]
name = "yoyo"
version = "1.14.2"
edition = "2021"

[dependencies]
anyhow = "1.0"
ignore = "0.4"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.49", features = ["rt-multi-thread", "io-util", "io-std", "macros"] }
rayon = "1.10"
tree-sitter = "0.26.6"
ast-grep-core = "0.41.0"
ast-grep-language = "0.41.0"
fastembed = "5.12.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
# Minimal fork that keeps yoyo on tree-sitter 0.26.x without carrying a local vendor copy.
tree-sitter-clojure = { git = "https://github.com/avirajkhare00/tree-sitter-clojure-yoyo.git", rev = "88266e3b72d33deb893ece7b94226252b7ea367b" }
tree-sitter-zig = "1.1.2"
rhai = { version = "1", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
